--- a/public/tuiter/explore/index.css
+++ b/public/tuiter/explore/index.css
@@ -17,16 +17,12 @@ body {
     justify-content: space-between;
 }
 
-.wd-search-container {
+.wd-container-search {
     height: 36px;
-    width: auto;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: space-between;
+    width: 80%;
 }
 
-.wd-search-container input[type="text"] {
+.wd-container-search input[type="text"] {
     width: 100%;
     height: 30px;
     background: darkgray;
@@ -43,19 +39,17 @@ body {
     position: relative;
     left: 13px;
     top: -28px;
-    content: '\1F50D';
 }
 
 .wd-gear {
     position: relative;
     overflow: hidden;
-    text-decoration: none;
     color: rgb(29, 161, 242);
     font-size: 30px;
     transform: scale(1, 1);
     padding-right: 12px;
-
-    /*padding-left: 40px;*/
+    padding-left: 30px;
+    text-decoration: none;
 }
 
 .wd-container-links {
@@ -70,24 +64,11 @@ body {
     font-weight: bold;
     padding: 16px;
     text-decoration: none;
-    /*text-align: center;*/
-    /*overflow: auto;*/
 }
 
-.wd-container-links .wd-tab.first {
+.wd-tab.first {
     color: rgb(29, 161, 242);
-    border-bottom: 5px solid rgb(29, 161, 242);
-}
-
-.wd-link {
-    position: relative;
-    overflow: hidden;
-    text-decoration: none;
-    color: rgb(29, 161, 242);
-    font-size: 30px;
-    transform: scale(1, 1);
-    padding-right: 12px;
-    padding-left: 40px;
+    border-bottom: 4px solid rgb(29, 161, 242);
 }
 
 .wd-post-de-img {
@@ -99,18 +80,13 @@ body {
     padding-bottom: 5px;
 }
 
-.wd-container-post-info-organization .wd-org-img {
-    width: 13px;
-    height: 13px;
-}
-
 .wd-container-post-c {
     border-bottom: 1px solid rgb(47, 51, 54);
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
-.wd-treading {
+.wd-trending {
     display: flex;
     justify-content: space-between;
 }
@@ -131,12 +107,13 @@ body {
     color: rgb(110, 118, 125);
 }
 
-.wd-href-no-decoration {
+.wd-href {
     overflow: hidden;
     text-decoration: none;
     color: rgb(110, 118, 125);
     font-size: 15px;
     transform: scale(1, 1);
+    padding-right: 16px;
 }
 
 .wd-container-post-organization {
@@ -144,6 +121,14 @@ body {
 }
 
 .wd-org-icon {
+    width: 13px;
+    height: 13px;
+    color: white;
+    padding-left: 2px;
+    padding-right: 4px;
+}
+
+.wd-org-verified {
     width: 13px;
     height: 13px;
     color: white;
